[gd_scene load_steps=13 format=2]

[ext_resource path="res://o.png" type="Texture" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://hoverquitbutton.png" type="Texture" id=3]
[ext_resource path="res://pressedplaybutton.png" type="Texture" id=4]
[ext_resource path="res://hoverplaybutton.png" type="Texture" id=5]
[ext_resource path="res://pressedquitbutton.png" type="Texture" id=6]
[ext_resource path="res://optionsbutton.png" type="Texture" id=7]
[ext_resource path="res://playbutton.png" type="Texture" id=8]
[ext_resource path="res://quitbutton.png" type="Texture" id=9]
[ext_resource path="res://hoveroptionsbutton.png" type="Texture" id=10]
[ext_resource path="res://pressedoptionsbutton.png" type="Texture" id=11]
[ext_resource path="res://loop.wav" type="AudioStream" id=12]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.88776
margin_right = -1.8877
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 49.0
margin_top = 154.0
margin_right = 1905.0
margin_bottom = 1050.0
custom_constants/separation = -650
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1856.0
margin_bottom = 986.0

[node name="TitleContainer" type="MarginContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 542.0
margin_right = 1314.0
margin_bottom = 986.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_bottom = 300
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CenterContainer/TitleContainer"]
margin_right = 772.0
margin_bottom = 686.0
texture = ExtResource( 1 )
stretch_mode = 5

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_left = 82.0
margin_top = 504.0
margin_right = 357.0
margin_bottom = 1020.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="MarginContainer" parent="HSplitContainer"]
margin_right = 275.0
margin_bottom = 516.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/ButtonContainer"]
margin_right = 275.0
margin_bottom = 516.0
custom_constants/separation = 30

[node name="StartButton" type="TextureButton" parent="HSplitContainer/ButtonContainer/VBoxContainer"]
margin_right = 275.0
margin_bottom = 150.0
action_mode = 0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="OptionsButton" type="TextureButton" parent="HSplitContainer/ButtonContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 275.0
margin_bottom = 330.0
action_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )

[node name="QuitButton" type="TextureButton" parent="HSplitContainer/ButtonContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 275.0
margin_bottom = 510.0
action_mode = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true
[connection signal="pressed" from="HSplitContainer/ButtonContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="HSplitContainer/ButtonContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="HSplitContainer/ButtonContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
